- Moved frontend data models to shared - Fixed bug where dialogs were too wide on non-phone devices - Fixed bug where server would be started even if pref setting failed

--- a/autom8_node/client/frontend/css/desktop.less
+++ b/autom8_node/client/frontend/css/desktop.less
@@ -18,9 +18,4 @@
         left: 50%;
         margin-left: -200px;
     }
-
-    .dialog-container {
-        max-width: 320px;
-        min-width: 320px;
-    }
 }
