--- a/autom8_node/shared/css/dialog.less
+++ b/autom8_node/shared/css/dialog.less
@@ -73,3 +73,10 @@
     }
 }
 
+@media only screen and (min-width: 400px) {
+    .dialog-container {
+        max-width: 320px;
+        min-width: 320px;
+    }
+}
+
